vlib/v/checker/tests/invalid_prefix_left_side_assign_stmt_err.out
vlib/v/checker/tests/invalid_prefix_left_side_assign_stmt_err.vv:3:2: error: cannot use `~` on the left of `=`
    1 | fn main() {
    2 |     mut x := 0
    3 |     ~x = 34
      |     ^
    4 |     &x = unsafe { nil }
    5 |     println(x)
vlib/v/checker/tests/invalid_prefix_left_side_assign_stmt_err.vv:4:2: error: cannot use a reference on the left side of `=`
    2 |     mut x := 0
    3 |     ~x = 34
    4 |     &x = unsafe { nil }
      |     ^
    5 |     println(x)
    6 | }
