vlib/v/checker/tests/invalid_prefix_left_side_assign_stmt_err.vv
fn main() {
	mut x := 0
	~x = 34
	&x = unsafe { nil }
	println(x)
}
